welcome.lessons.welcome.bat.bool1.Diff21.scala.error
diff21:5: error: type mismatch;
 found   : Unit
 required: Int
			if ( n > 21) {
                        ^