welcome.lessons.welcome.bat.bool1.Diff21.scala.code
def diff21(n:Int): Int = {
		if ( n <= 21 )  {
			Math.abs(n-21) 
		}else {
			if ( n > 21) {
				2*Math.abs(n-21) 
			}
			
		}
		







}
